--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: #f9f9f9;
-        color: #333;
+        background: linear-gradient(135deg, #f8fafc, #f1f5f9, #e2e8f0);
+        color: #334155;
       }
 
       .container {
@@ -36,11 +36,12 @@
       }
 
       .card {
-        background: #fff;
+        background: #ffffff;
         border-radius: 16px;
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+        box-shadow: 0 6px 20px rgba(71, 85, 105, 0.1);
         padding: 25px;
         text-align: center;
+        border: 1px solid #e2e8f0;
       }
 
       .profile-section img {
@@ -51,7 +52,7 @@
 
       .tagline {
         font-size: 14px;
-        color: #666;
+        color: #64748b;
         margin-bottom: 25px;
         line-height: 1.4;
       }
@@ -61,20 +62,21 @@
         display: inline-block;
         padding: 14px 28px;
         border-radius: 50px;
-        color: #000; /* black text */
+        color: #1e293b;
         text-decoration: none;
         font-size: 16px;
         font-weight: bold;
-        background: #fff; /* white background */
+        background: #ffffff;
         overflow: hidden;
         z-index: 1;
+        border: 1px solid #cbd5e1;
       }
 
       .main-link a i {
         margin-right: 8px;
       }
 
-      /* Animated border effect */
+      /* Animated border effect with cooler colors */
       .main-link a::before {
         content: "";
         position: absolute;
@@ -85,11 +87,11 @@
         border-radius: 50px;
         background: linear-gradient(
           270deg,
-          #ff0057,
-          #ff7b00,
-          #00ff95,
-          #007bff,
-          #ff0057
+          #3b82f6,
+          #06b6d4,
+          #10b981,
+          #8b5cf6,
+          #3b82f6
         );
         background-size: 400% 400%;
         animation: borderGlow 6s linear infinite;
@@ -100,7 +102,7 @@
         content: "";
         position: absolute;
         inset: 2px;
-        background: #fff; /* inner stays white */
+        background: #ffffff;
         border-radius: 50px;
         z-index: -1;
       }
@@ -117,22 +119,21 @@
         }
       }
 
-      /* Phone button - green glow style */
-     
+      /* Phone button - clean blue */
       .phone-link a {
         position: relative;
         display: inline-block;
         padding: 14px 28px;
         border-radius: 50px;
-        color: #fff; /* white text */
+        color: #ffffff;
         text-decoration: none;
         font-size: 16px;
         font-weight: bold;
         margin-top: 12px;
-        background: #25d366; /* WhatsApp green */
-        box-shadow: 0 0 12px rgba(37, 211, 102, 0.6);
+        background: #3b82f6;
+        box-shadow: 0 0 12px rgba(59, 130, 246, 0.3);
         transition: 0.3s;
-        border: 2px solid #128C7E; /* darker green border */
+        border: 2px solid #2563eb;
       }
 
       .phone-link a i {
@@ -140,13 +141,14 @@
       }
 
       .phone-link a:hover {
-        background: #20b954;
-        box-shadow: 0 0 18px rgba(37, 211, 102, 0.8);
+        background: #2563eb;
+        box-shadow: 0 0 18px rgba(59, 130, 246, 0.4);
       }
+
       /* Section Title */
       .section-title {
-        background: #000;
-        color: #fff;
+        background: #1e293b;
+        color: #f8fafc;
         padding: 10px 15px;
         border-radius: 12px;
         font-size: 15px;
@@ -164,18 +166,20 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: #fff;
+        background: #ffffff;
         padding: 15px;
         border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 4px 12px rgba(71, 85, 105, 0.08);
         text-decoration: none;
-        color: #333;
+        color: #334155;
         transition: 0.3s;
+        border: 1px solid #e2e8f0;
       }
 
       .link-card:hover {
         transform: translateY(-3px);
-        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+        box-shadow: 0 6px 16px rgba(71, 85, 105, 0.12);
+        background: #f8fafc;
       }
 
       .link-info {
@@ -186,31 +190,32 @@
       .link-info span {
         display: block;
         font-size: 12px;
-        color: #888;
+        color: #64748b;
       }
 
       /* Square Icon Style */
       .link-icon {
         width: 40px;
         height: 40px;
-        background: #f0f0f0;
+        background: #f1f5f9;
         display: flex;
         justify-content: center;
         align-items: center;
-        border-radius: 8px; /* square with soft edges */
+        border-radius: 8px;
         font-size: 18px;
         transition: 0.3s;
+        color: #475569;
       }
 
       .link-card:hover .link-icon {
-        background: #333;
-        color: #fff;
+        background: #1e293b;
+        color: #f8fafc;
       }
 
       .footer-section {
         margin-top: 20px;
         font-size: 12px;
-        color: #aaa;
+        color: #94a3b8;
       }
     </style>
   </head>
@@ -235,7 +240,7 @@
 
         <!-- Phone button -->
         <div class="phone-link">
-          <a href="tel:+91917006407397">
+          <a href="tel:+917006407397">
             <i class="fas fa-phone-alt"></i>
             Call Us
           </a>
