link url change

--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
       .link-info span {
         display: block;
         font-size: 12px;
-        color: #64748b;
+        color: #575454;
+        margin-top: 2px;
+        font-weight: 600;
       }
 
       /* Square Icon Style */
@@ -279,24 +281,24 @@
             <div class="link-icon"><i class="fab fa-whatsapp"></i></div>
           </a>
           <a
-            href="https://github.com/SynthCipher?tab=repositories"
+            href="https://github.com/onela-in"
             target="_blank"
             class="link-card"
           >
             <div class="link-info">
               GitHub
-              <span>SynthCipher</span>
+              <span>onela-in</span>
             </div>
             <div class="link-icon"><i class="fab fa-github"></i></div>
           </a>
           <a
-            href="https://www.linkedin.com/in/jigmatdorjey/"
+            href="https://www.linkedin.com/company/onela-in/"
             target="_blank"
             class="link-card"
           >
             <div class="link-info">
               LinkedIn
-              <span>Jigmat Dorjey</span>
+              <span>Onela</span>
             </div>
             <div class="link-icon"><i class="fab fa-linkedin-in"></i></div>
           </a>
